# ethernot

./: .gitignore  README.md  pyproject.toml  tethernot.py
src/ethernot/: ethernot.py
